fix: modal非表示のとき、visibility: hiddenを追加

--- a/src/components/modal/src/modal.module.scss
+++ b/src/components/modal/src/modal.module.scss
@@ -15,6 +15,7 @@
 
     &.--hidden {
         opacity: 0;
+        visibility: hidden;
     }
 
     .content {
